--- a/TPC7/dawApp/package.json
+++ b/TPC7/dawApp/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "ndmn" : "nodemon ./bin/www"
   },
   "dependencies": {
     "debug": "~2.6.9",
